--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,12 @@
 #dslc-header.dslc-header-pos-fixed {
   z-index: 500 !important;
 }
+.react-datepicker-wrapper{
+  width: 100%;
+}
+.react-datepicker__input-container{
+  width: 100%;
+}
+.rc-dp-input{
+  width: 100%;
+}
